tests/ui/consts/const-multi-ref.stderr
error[E0658]: mutable references are not allowed in constants
  --> $DIR/const-multi-ref.rs:6:13
   |
LL |     let p = &mut a;
   |             ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: cannot borrow here, since the borrowed element may contain interior mutability
  --> $DIR/const-multi-ref.rs:16:13
   |
LL |     let p = &a;
   |             ^^
   |
   = note: see issue #80384 <https://github.com/rust-lang/rust/issues/80384> for more information
   = help: add `#![feature(const_refs_to_cell)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
